puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.TodoLists/content/Views/Dashboard/_TodoPartial.cshtml.pp
@{
    Bundles.Reference("content/custom/todo.less", "custom");
}

<div class="todo-list">
    <h4>
        Infrastructure</h4>
    <table class="table table-bordered">
        <tr>
            <td>
                <label class="checkbox">
                    <input type="checkbox" />
                    Choose a <a href="#">Hosting Provider</a>
                </label>
            </td>
        </tr>
        <tr>
            <td>
                <form class="form-inline">
                <input type="text" />
                <input type="submit" class="btn" value="Create To-do item" />
                </form>
            </td>
        </tr>
    </table>
</div>
<hr />
<div class="todo-list">
    <h4>
        Setup</h4>
    <table class="table table-bordered">
        <tr>
            <td>
                <label class="checkbox">
                    <input type="checkbox" />
                    Configure Google Apps
                </label>
            </td>
        </tr>
        <tr>
            <td>
                <label class="checkbox">
                    <input type="checkbox" />
                    Change administrator password
                </label>
            </td>
        </tr>
        <tr>
            <td>
                <form class="form-inline">
                <input type="text" />
                <input type="submit" class="btn" value="Create To-do item" />
                </form>
            </td>
        </tr>
    </table>
</div>
